# medibot-ai

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  rag_engine.py  safety.py
data_eval/: evaluation_results.md  golden_qa_dataset.json
scripts/: evaluate_custom.py  ingest.py  query_cli.py
